# boilerplate_redis-stream-worker

./: .gitignore  Dockerfile  README.md  health.yaml  pyproject.toml  template.json
k8s/: deployment.yaml  scaledjob.yaml
tests/: conftest.py  test_consumer.py  test_handler.py
worker/: __init__.py  config.py  consumer.py  handler.py  main.py  metrics.py  tracing.py
