[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-stream-worker"
version = "0.1.0"
description = "Async Redis Streams worker boilerplate (KEDA, Prometheus, tracing)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "redis[hiredis]>=5.0.0",
  "pydantic-settings>=2.2.0",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "fakeredis[lua]>=2.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
